# neskuchka

./: .cursorrules  .editorconfig  .gitignore  .mise.toml  Caddyfile  Dockerfile  README.md  compose.private.yml  docker-dev-compose.yml  hk.pkl  test_commit.txt  todo.md
.github/workflows/: build.yml  chromatic.yml  ci-backend.yml  ci-frontend.yml  ci.yml
app/: __init__.py  routes.py
app/domain/: exercise.py
backend/: .gitignore  .golangci.bck.yml  .golangci.yml  .mise.toml  README.md  fill_db.py  go.mod  go.sum  pytest.ini  requirements.txt
backend/app/: .air.toml  __init__.py  config.py  main.go  main.py  main_test.go  test_main.py
backend/docs/: migrations.md
backend/examples/: .gitignore  README.md  avatar.http  user.http
backend_old/: .gitignore  fill_db.py  pyproject.toml
backend_old/app/api/routes/: exercises.py  tracks.py
backend_old/app/config/: main.py  test.py
backend_old/app/domain/: user.py  workout.py
backend_old/app/infrastructure/db/: database.py  exercise.py  workout.py
backend_old/app/tests/api/routes/: test_exercise_api.py  test_track_api.py
backend_old/app/tests/infrastructure/db/: test_exercise_repo.py  test_workout_repo.py
examples/: auth.http  get_exersices.hurl  get_ping.http
frontend/: .eslintcache  .gitignore  .mise.toml  .stylelintcache  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.mjs
frontend/.storybook/: main.ts  preview.tsx
frontend/app/: .prettierignore  .prettierrc.json  .stylelintrc.json  README.md  eslint.config.js  (+4 more)
tech_doc/: glossary.md
(+328 files in other folders)
